webpage fixed
- fixed scrollbar issue

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1 {
 .socials {
     display: block;
     position: relative;
-    margin-left: 37%;
+    margin-left: 43.5%;
 }
 
 .socials_links {
